--- a/app/templates/users/list.html
+++ b/app/templates/users/list.html
@@ -52,6 +52,7 @@
           <!-- Ações: Editar e Excluir -->
           <a href="{{ url_for('users.edit_user', user_id=usuario.id) }}" class="btn btn-primary me-2">Editar</a>
           <form action="{{ url_for('users.delete_user', user_id=usuario.id) }}" method="POST" class="d-inline">
+		    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
             <button type="submit" class="btn btn-danger" onclick="return confirm('Tem certeza que deseja excluir este usuário?')">Excluir</button>
           </form>
         </div>
