--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -26,6 +26,13 @@
         <h1 class="card-title mb-4">Login</h1>
         <form method="POST">
           {{ form.hidden_tag() }}
+		  {# Exibe erro de CSRF, se houver #}
+		  {% if form.csrf_token.errors %}
+			<div class="alert alert-danger">
+			  {{ form.csrf_token.errors[0] }}
+			</div>
+		  {% endif %}
+		  
           <!-- Campo de Username -->
           <div class="mb-3">
             <label class="form-label">{{ form.username.label }}</label>
