--- a/app/templates/formulario.html
+++ b/app/templates/formulario.html
@@ -458,6 +458,11 @@
   
   <!-- Bootstrap JS Bundle -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+
+<script>
+  // CSRF já disponível graças ao context processor
+  const CSRF_TOKEN = "{{ csrf_token() }}";
+</script>
   
   <script>
     // Monitoramento de sessão
@@ -750,7 +755,8 @@
     
       fetch('/embarcacoes/api/pedidos-autorizacao', {
         method: "POST",
-        headers: { "Content-Type": "application/json" },
+        headers: { "Content-Type": "application/json",
+					"X-CSRFToken": CSRF_TOKEN		},
         body: JSON.stringify(pedido)
       })
       .then(response => {
@@ -917,7 +923,8 @@
     
       fetch(`/embarcacoes/api/pedidos-autorizacao/${pedidoId}`, {
         method: "PUT",
-        headers: { "Content-Type": "application/json" },
+        headers: { "Content-Type": "application/json",
+					"X-CSRFToken": CSRF_TOKEN},
         body: JSON.stringify(pedido)
       })
       .then(response => {
